--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -1348,51 +1348,6 @@ body{
 
 }
 
-.main-area-right .transactionsPageHome{
-
-    /* border: 2px solid red; */
-    /* display: none; */
-    position: relative;
-    margin: 50px auto;
-    margin-top: 82px;
-    width: 70%;
-    /* height: 500px; */
-    background: #3b5998;
-    color: #fff;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    padding: 10px;
-    box-sizing: border-box;
-    /* transition: transform 1s; */
-    box-shadow: 0 5px 15px rgba(0,0,0,.9);
-    border-radius: 10px; 
-    /* animation: 2s animation;
-    animation-fill-mode: forwards; */
-
-}
-
-.main-area-right .transactionsPageHome table, th, td{
-    margin:auto;
-    margin-left: 100px;
-    /* border-bottom: 1px solid white; */
-    text-align: center;
-    /* border-collapse: collapse; */
-    height: 40px;
-    table-layout: fixed;
-    /* opacity: .9; */
-    
-}
-.main-area-right .transactionsPageHome table tr:hover{
-    background: #6b9aff;
-}
-
-/* @keyframes animation{
-0%{top:-50px;}
-100%{top:0px;}
-} */
-/* .main-area-right .transactionsPage:hover{
-    transform: scale(.9);
-} */
 .main-area-right .transactionsPage h2{
     margin: 0 0 30px;
     padding: 0;
@@ -1495,6 +1450,39 @@ body{
     box-shadow: 0 5px 15px rgba(0,0,0,.9);
 }
 
+/* ADMIN AND STAFF DASHBOARD TABLE */
+
+.newusersTable .transactionsPageHome table{
+    text-align: center;
+    margin: auto;
+    color: #fff;
+}
+.newusersTable .transactionsPageHome table tr:hover{
+    color: #4f7de0;
+}
+
+/* ADMIN CREATE ACCOUNT SELECT PART */
+.createAccountInput select{
+    width: 78%;
+}
+@media (min-width: 1800px){
+    .createAccountInput select{
+        margin-left: 2px;
+        width: 80%;
+    }
+}
+@media (min-width: 1440px){
+    .createAccountInput select{
+        margin-left: 4px;
+        width: 80%;
+    }
+}
+@media (min-width: 960px){
+    .createAccountInput select{
+        margin-left: 8px;
+        width: 80%;
+    }
+}
 #footerId{
     transition: margin-left 0.5s;
 }
