--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -249,7 +249,7 @@ body{
 #main-area .non-slider{
     /* border: 2px solid green; */
     height: 40%;    
-    background:rgb(180, 76, 76);
+    /* background:rgb(180, 76, 76); */
     flex-basis: 50%;
 }
 
@@ -382,7 +382,7 @@ body{
     #main-area .non-slider{
         /* border: 2px solid green; */
         height: 100%;    
-        background:rgb(180, 76, 76);
+        /* background:rgb(180, 76, 76); */
         flex-basis: 50%;
     }
     #main-area .slider p{
