--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -865,6 +865,10 @@ body{
 .main-area-left .sideMenu ul a:hover{
     color: #4f7de0;
 }
+/* CURRENT PAGE */
+.current{
+    border-left: 2px solid yellow;
+}
 /* 
 @keyframes profile{
 0%{top:-80px}
@@ -1403,6 +1407,10 @@ body{
     border-radius: 5px;
 
 }
+.main-area-right .transactionsPage .singleAccountView .singleAccountViewTwo button:hover{
+    background: #4f7de0;
+    color: white;
+}
 .main-area-right .transactionsPage .singleAccountView .singleAccountViewTwo .green{
     background: green;
 }
@@ -1418,6 +1426,9 @@ body{
         font-size: 10px;
         height: 400px;
     }
+    .main-area-right .transactionsPage .singleAccountView .singleAccountViewTwo button{
+        width: 35%;
+    }
 }
 
 @media (max-width: 959px){
@@ -1425,6 +1436,9 @@ body{
         font-size: 10px;
         height: 500px;
         overflow: auto;
+    }
+    .main-area-right .transactionsPage .singleAccountView .singleAccountViewTwo button{
+        width: 50%;
     }
 }
 
@@ -1435,6 +1449,9 @@ body{
         margin-bottom: -50px;
         overflow: auto;
 
+    }
+    .main-area-right .transactionsPage .singleAccountView .singleAccountViewTwo button{
+        width: 67%;
     }
     
 }
@@ -1607,14 +1624,14 @@ body{
     }
 }
 /* STAFF DASHBOARD PAGE */
-.staffNewUsers table{
+/* .staffNewUsers table{
     text-align: center;
     margin: auto;
     color: #fff;
 }
 .staffNewUsers table tr:hover{
     color: #4f7de0;
-}
+} */
 
 
 #footerId{
