--- a/UI/CSS/loginform.css
+++ b/UI/CSS/loginform.css
@@ -4,7 +4,7 @@ body{
     padding: 0;
     width: 100%;
     height: 100%;
-    background: url('../ASSETS/accounting.jpg');
+    background-image: linear-gradient(rgba(149,165,166 ,0.5), rgba(52,73,94 ,0.5)), url(https://images.pexels.com/photos/1451448/pexels-photo-1451448.jpeg?cs=srgb&dl=analysis-banking-businesswoman-1451448.jpg&fm=jpg);
     background-size: cover;
 }
 /* css styles for login UI */
@@ -178,4 +178,10 @@ body{
         width: 85%;
         margin-bottom: 30px;
     }
+}
+
+.backButton i {
+    position: relative;
+    font-size: 100px;
+    color: #4f7de0;
 }
