--- a/UI/CSS/loginform.css
+++ b/UI/CSS/loginform.css
@@ -4,93 +4,70 @@ body{
     padding: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(rgba(149,165,166 ,0.5), rgba(52,73,94 ,0.5)), url(https://images.pexels.com/photos/1451448/pexels-photo-1451448.jpeg?cs=srgb&dl=analysis-banking-businesswoman-1451448.jpg&fm=jpg);
+    background-image: linear-gradient(rgba(149,165,166 ,0.9), rgba(52,73,94 ,0.9)), url(https://images.pexels.com/photos/1451448/pexels-photo-1451448.jpeg?cs=srgb&dl=analysis-banking-businesswoman-1451448.jpg&fm=jpg);
     background-size: cover;
 }
 /* css styles for login UI */
 
-.non-slider .login{
+.login{
     position: relative;
     margin: 130px auto;
     width: 30%;
-    background: #3b5998;
+    background: white;
     padding: 20px;
     box-sizing: border-box;
-    box-shadow: 0 5px 15px rgba(0,0,0,.9);
-    border-radius: 10px; 
+    box-shadow: 0 1px 5px rgba(0,0,0,.5);
     transition: transform 1s;
-    animation: 2s animation;
+    /* animation: 2s animation; */
     animation-fill-mode: forwards;
 }
 @keyframes animation{
     0%{top:-100px;}
     100%{top:0px;}
 }
-/* .non-slider .login:hover{
-    transform: scale(.9);
-    background: #6b9aff;
-} */
-.non-slider .login h2{
+
+.login h2{
     margin: 0 0 30px;
     padding: 0;
-    color: #fff;
+    color: #1da1f2;
     text-align: center;
 }
-.non-slider .login .loginInput{
+.login .loginInput{
     position: relative;
     margin-left: 50px;
     width: 90%;
 }
-.non-slider .login .loginInput input{
+.login .loginInput input{
     width: 85%;
-    padding: 17px 0;
-    margin-top: 10px;
+    padding: 17px 0 17px 17px;
+    margin: 10px auto auto 0px;
     font-size: 16px;
-    border-radius: 10px;
+    border-radius: 25px;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    pointer-events: fill;
-    background: #ddd;
+    background:transparent;
+    border: 1px solid #1da1f2;
+    outline: none;
 }
-/* .non-slider .login .loginInput label{
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding:0;
-    margin-top: -10px;
-    font-size: 20px;
-    letter-spacing: 1px;
-    color: #fff;
-    pointer-events: none;
-    transition: .9s;
-} */
-/* .non-slider .login .loginInput input:focus ~ label,
-.non-slider .login .loginInput input:valid ~ label
-{
-    top: -10px;
-    left: 0;
-    color: rgb(253, 176, 9);
-    font-size: 15px;
-} */
 
-.non-slider .login input[type="submit"]{
+
+.login input[type="submit"]{
     background: transparent;
     border: none;
     outline: none;
-    color: #fff;
-    background: rgb(253, 176, 9);
+    color: #1da1f2;
     padding: 15px;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 25px;
     font-size: 18px;
     text-align: center;
-    margin:10px 0 20px 50px;
-    width: 78%;
+    margin:20px 0 20px 50px;
+    width: 79%;
 }
-.non-slider .login input[type="submit"]:hover{
-    background: rgb(253, 176, 9);
-    opacity: .5;
-    color: #3b5998;
+.login input[type="submit"]:hover{
+    background: #1da1f2;
+    opacity: .9;
+    color: white;
 }
 .closelogin-icon{
     text-decoration: none;
@@ -105,77 +82,79 @@ body{
 /* media queries for login */
 
 @media (min-width: 1800px){
-    .non-slider .login .loginInput{
+    .login .loginInput{
         margin: 0 auto 0 210px;
         width: 80%;
         display: flex;
         flex-direction: column;
     }
-     .non-slider .login{
+     .login{
         width: 50%;
     }
-    .non-slider .login input[type="submit"]{
+    .login input[type="submit"]{
         margin: 15px auto 0 210px;
-        width: 68.5%;
+        width: 70%;
         margin-bottom: 30px;
     }
 }
 
 
 @media (max-width: 1440px){
-    .non-slider .login .loginInput{
+    .login .loginInput{
         /* margin-left: 120px; */
         margin: 0 auto 0 105px;
         width: 80%;
         display: flex;
         flex-direction: column;
     }
-    .non-slider .login{
+    .login{
         width: 50%;
     }
-    .non-slider .login input[type="submit"]{
+    .login input[type="submit"]{
         margin: 15px auto 0 105px;
         margin-bottom: 30px;
-        width: 68%;
+        width: 71%;
     }
 }
 @media (max-width: 1024px){
-    .non-slider .login .loginInput{
+    .login .loginInput{
         margin-left: 90px;
     }
-    .non-slider .login{
+    .login{
         width: 60%;
     }
-    .non-slider .login input[type="submit"]{
+    .login input[type="submit"]{
         margin-left: 90px;
         margin-bottom: 30px;
+        width: 71%;
     }
 }
 @media (max-width: 768px){
-    .non-slider .login .loginInput{
-        margin-left: 85px;
+    .login .loginInput{
+        margin-left: 70px;
     }
-    .non-slider .login{
+    .login{
         width: 70%;
     }
-    .non-slider .login input[type="submit"]{
-        margin-left: 85px;
+    .login input[type="submit"]{
+        margin-left: 68px;
         margin-bottom: 30px;
+        width: 72%;
     }
 }
 @media (max-width: 425px){
-    .non-slider .login .loginInput{
-        margin: 0 auto 0 27px;
+    .login .loginInput{
+        margin: 0 auto 0 20px;
         width: 100%;
         display: flex;
         flex-direction: column;
     }
-    .non-slider .login{
+    .login{
         width: 90%;
     }
-    .non-slider .login input[type="submit"]{
-        margin-left: 27px;
-        width: 85%;
+    .login input[type="submit"]{
+        margin-left: 23px;
+        width: 88%;
         margin-bottom: 30px;
     }
 }
@@ -183,5 +162,10 @@ body{
 .backButton i {
     position: relative;
     font-size: 100px;
-    color: #4f7de0;
+    color: white;
 }
+
+.errMessage{
+    display: none;
+    color: red;
+} 
