--- a/UI/CSS/homepage.css
+++ b/UI/CSS/homepage.css
@@ -10,8 +10,8 @@
     display: flex;
 }
 .banka i{
-    font-size: 130px;
-    margin-top: 100px;
+    font-size: 127px;
+    margin-top: 97px;
     color: #1da1f2;
 }
 .banka h1{
@@ -60,4 +60,83 @@
     border-radius: 25px;
     outline: none;
     background: transparent;
+}
+
+/* media query */
+@media (max-width: 1440px){
+    .banka i{
+        font-size: 120px;
+        margin-top: 95px;
+        color: #1da1f2;
+    }
+    .banka h1{
+        margin-left: 25px;
+        font-size: 145px;
+        letter-spacing: 2px;
+        color: white;
+    }
+}
+@media (max-width: 1024px){
+    .homepage{
+        width: 70%;
+    }
+    .banka i{
+        font-size: 100px;
+        margin-top: 85px;
+        color: #1da1f2;
+    }
+    .banka h1{
+        margin-left: 25px;
+        font-size: 125px;
+        letter-spacing: 4px;
+        color: white;
+    }
+    .description p{
+        font-size: 18px;
+        letter-spacing: 1.2px;
+        margin-top: -100px;
+    }
+}
+@media (max-width: 768px){
+    .homepage{
+        width: 70%;
+    }
+    .banka i{
+        font-size: 48px;
+        margin-top: 37px;
+        color: #1da1f2;
+    }
+    .banka h1{
+        margin-left: 10px;
+        font-size: 60px;
+        letter-spacing: 2px;
+        color: white;
+    }
+    .description p{
+        font-size: 17px;
+        letter-spacing: 1.2px;
+        margin-top: -20px;
+    }
+}
+
+@media (max-width: 425px){
+    .homepage{
+        width: 70%;
+    }
+    .banka i{
+        font-size: 45px;
+        margin-top: 29px;
+        color: #1da1f2;
+    }
+    .banka h1{
+        margin-left: 10px;
+        font-size: 50px;
+        letter-spacing: 2px;
+        color: white;
+    }
+    .description p{
+        font-size: 15px;
+        letter-spacing: 1.2px;
+        margin-top: -10px;
+    }
 }
