[feature #165930333] fetch api for signup, login, and create account

--- a/UI/CSS/loginform.css
+++ b/UI/CSS/loginform.css
@@ -169,3 +169,9 @@ body{
     display: none;
     color: red;
 } 
+
+.signupconflictmsg{
+    text-align: center;
+    margin-top: 10px;
+    color: #1da1f2;
+}
